[package]
name = "curly-giggle"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.4"
rand = { version = "0.8", features = ["small_rng"] }

[[bench]]
name = "bm_sds"
harness = false

[[bench]]
name = "bm_zskiplist"
harness = false

[features]

default = []

full = [
    "collection",
]

collection = [
]